[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/snav.png" type="Texture" id=1]
[ext_resource path="res://img/Nave.png" type="Texture" id=2]
[ext_resource path="res://som/tiro.wav" type="AudioStream" id=3]
[ext_resource path="res://som/dano.wav" type="AudioStream" id=4]
[ext_resource path="res://Tuto/NaveTut2.gd" type="Script" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -36, 0, -48, 24, 50, 0, -48, -24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "norm",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "dano",
"speed": 5.0
} ]

[node name="NaveTut" type="KinematicBody2D" groups=[
"Asteroides",
"Tutor",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.7686, -0.0773697 )
scale = Vector2( 1.05, 1.05 )
z_index = 3
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
animation = "norm"
playing = true

[node name="ttiro2" type="Timer" parent="."]
wait_time = 0.5

[node name="danotimer2" type="Timer" parent="."]
[connection signal="timeout" from="ttiro2" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="danotimer2" to="." method="_on_danotimer2_timeout"]
